# rusty_rules

./: Cargo.toml  bigRules.json  index.js  makeCharts.js  package-lock.json  package.json  perfData.json  temp.js
charts/: manyRules.html  singleRule.html
src/: lib.rs  main.rs  rules_engine.rs  temp.json  temp.rs
