[package]
name = "rusty_rules"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/lib.rs"

[dependencies]
evalexpr = "8.1.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]